<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="primer_numero">Valor 1</string>
    <string name="segundo_numero">Valor 2</string>
    <string name="tercer_numero">Valor 3</string>
    <string name="calcular">Calcular</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="dividir">Dividir</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="total">Total</string>
</resources>